scss/site/_header.scss
// header

#masthead {
	position: relative;
}

#masthead hgroup {
	height: 260px;
	background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/illustration-scenery.png') center 30px repeat-x;

	@media only screen and (min-resolution: 192dpi),
	only screen and (min-resolution: 2dppx) {
		background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/illustration-scenery@2x.png') center 30px repeat-x;
		background-size: 1183px 271px;
	}

	@include respond-above( 'large' ) {
		background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-mobile.png') right bottom no-repeat,
					$offwhite url('https://europe.wordcamp.org/2016/files/2015/11/illustration-scenery.png') center 100px repeat-x;
		background-size: auto, auto;
		background-attachment: scroll, fixed;
	}

	@media only screen and ( min-width: 960px ) and (min-resolution: 192dpi),
	only screen and ( min-width: 960px ) and (min-resolution: 2dppx) {
		background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-mobile@2x.png') right bottom no-repeat,
					$offwhite url('https://europe.wordcamp.org/2016/files/2015/11/illustration-scenery@2x.png') left 50px repeat-x;
		background-size: 640px 560px, 1183px 271px;
		background-attachment: scroll, fixed;
	}
}

// make it large on home

.home {
	height: 100%;

	#page,
	#masthead {
		height: 100%;
	}

	#masthead hgroup {
		height: 100%;
		background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-mobile.png') center bottom no-repeat,
					$offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery-mobile.png') center bottom repeat-x;
		background-size: auto, auto;
		background-attachment: scroll, fixed;

		@media only screen and (min-resolution: 192dpi),
		only screen and (min-resolution: 2dppx) {
			background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-mobile@2x.png') center bottom no-repeat,
						$offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery-mobile@2x.png') center bottom repeat-x;
			background-size: 640px 560px, 640px 560px;
		}

		@media screen and ( min-width: 600px ) {
			background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration.png') center bottom no-repeat,
						$offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery.png') center bottom repeat-x;
			background-size: auto, auto;
			background-attachment: scroll, fixed;
		}

		@media only screen and ( min-width: 600px ) and (min-resolution: 192dpi),
		only screen and ( min-width: 600px ) and (min-resolution: 2dppx) {
			background: $offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration@2x.png') center bottom no-repeat,
						$offwhite url('https://europe.wordcamp.org/2016/files/2015/11/home-illustration-scenery@2x.png') center bottom repeat-x;
			background-size: 1183px 560px, 1183px 560px;
			background-attachment: scroll, fixed;
		}
	}

}

// admin bar corrected

.admin-bar.home {

	#masthead {
		height: calc(100% - 32px);

		@media screen and ( max-width: 782px ) {
			height: calc(100% - 46px);
		}
	}
}

// logos

.site-header hgroup {
	text-align: center;
	padding-top: 140px;
	border-bottom: 2px solid $blue;

	@media screen and ( min-width: 600px ) {
		border: none;
	}

	@include respond-above( 'large' ) {
		padding-top: 100px;
		text-align: left;
		padding-left: 100px;
	}
}

.site-title  {
	@include responsive-text-size('kilo');
	margin: 0;

	a {
		position: relative;
		display: block;
		text-decoration: none;

		@include respond-above( 'large' ) {
			padding-left: 80px;
		}

		&::first-letter {
			letter-spacing: -3px;
		}

		&:before {
			content: '';
			position: absolute;
			left: 50%;
			bottom: 40px;
			margin-left: -60px;
			width: 120px;
			height: 100px;
			background-size: 100% 100%;
			background-repeat: no-repeat;
			background-image: url('https://europe.wordcamp.org/2016/files/2015/11/wordcamp-2016-temp.png');

			@include respond-above( 'large' ) {
				left: 0;
				bottom: auto;
				top: -20px;
				width: 130px;
				height: 108px;
				margin-left: -65px;
			}
		}
	}
}

.site-description {
	@include responsive-text-size('deca');
	font-weight: 300;
	margin: 0;
	color: $blue;

	@include respond-above( 'large' ) {
		padding-left: 80px;
	}
}

.home .site-header hgroup {
	padding-top: 100px;

	@include respond-above( 'large' ) {
		text-align: center;
		padding-left: 0;
	}
}

.home .site-title {
	margin-top: 100px;

	a {

		@include respond-above( 'large' ) {
			padding-left: 0;
		}

		&:before {
			top: -110px;

			@include respond-above( 'large' ) {
				top: -150px;
				left: 50%;
				width: 150px;
				height: 125px;
				margin-left: -75px;
			}
		}
	}
}

.home .site-description {

	@include respond-above( 'large' ) {
		padding-left: 0;
	}
}

// header widgets

/*

Add the following HTML to After Header & After Header homepage

<div class="cta-widget">
	<a href="#" class="button">Call to Action!</a>
	<ul class="cta-second">
		<li><a href="#">Call to Action!</a></li>
		<li><a href="#">Call to Action!</a></li>
		<li><a href="#">Call to Action!</a></li>
	</ul>
</div>

 */

.cta-widget {
	text-align: center;
	position: absolute;
	top: 180px;
	left: 50%;
	margin-left: -56px;
	display: none;

	@include respond-above( 'large' ) {
		top: 100px;
		right: 50px;
		left: auto;
		display: block;
	}

	.button {
		display: inline-block !important;
		margin-bottom: gutter(12);
	}
}

.admin-bar .cta-widget {
	top: 130px;
}

.home .cta-widget {
	left: 50%;
	right: auto;
	top: 325px;
	margin-left: -64px;
	display: block;

	@media screen and ( min-width: 600px ) {
		top: 350px;
	}

	@include respond-above( 'small' ) {
		margin-left: -85px;
	}

	@include respond-above( 'x-large' ) {
		margin-left: -90px;
	}
}

.cta-second {
	@include responsive-text-size('centi');
	margin: 0;
	padding: 0;
	display: none; // for now

	li {
		display: inline;
		margin: 0 0;
	}
}

/*

Add sub menu widgets to the After Header sidebar
Use the conditional display options in JetPack to apply different menus in different sections

*/

#after-header-widgets {
	.widget_nav_menu {
		@include container( breakpoint('large') );

		.widget-title {
			@include responsive-text-size('base');
			margin: (gutter(12) * 5) 15px 0 15px;
			padding: 7px 15px 7px 15px;
			color: $green;
			position: relative;
			text-align: center;
			font-style: italic;
			letter-spacing: 0;
			// http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+39,ffffff+40,ffffff+60,ffffff+61,ffffff+100&amp;0+0,0+39,0+39,1+40,1+60,0+61,0+100
			background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 39%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 60%, rgba(255,255,255,0) 61%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
			background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 39%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(255,255,255,0) 61%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
			background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 39%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 60%,rgba(255,255,255,0) 61%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */

			&:after {
				content: '';
				display: block;
				position: absolute;
				width: 100%;
				left: 0;
				height: 1px;
				background: $offwhite;
				margin-top: 1px;
				top: 50%;
				z-index: -1;
			}

			@include respond-above( 'medium' ) {
				margin-top: (gutter(12) * 2)
			}

			@include respond-above( 'large' ) {
				margin-left: 0;
				margin-right: 0;
			}
		}

		.menu {
			@include clearfix();
			padding: 7px 15px;
			margin: 0 15px 0 15px;
			list-style: none;
			border-bottom-right-radius: 5px;
			border-bottom-left-radius: 5px;
			text-align: center;

			@include respond-above( 'large' ) {
				margin: 0;
			}

			li {
				@include respond-above( 'medium' ) {
					display: inline-block;
					padding: 0 15px;
					position: relative;

					&:after {
						content: '';
						width: 6px;
						height: 6px;
						border-radius: 50%;
						background: $green;
						display: block;
						position: absolute;
						top: 45%;
						left: -7px;
					}

					&:first-child:after {
						display: none;
					}
				}

				a {
					display: block;
				}

				&.current-menu-item a {
					color: $blue;
				}
			}
		}
	}
}

